--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.3",
     "@react-native-masked-view/masked-view": "^0.2.2",
     "@react-navigation/drawer": "^5.12.4",
     "@react-navigation/native": "^5.9.3",
@@ -15,6 +16,7 @@
     "cors": "^2.8.5",
     "expo": "~40.0.0",
     "expo-image-picker": "~9.2.0",
+    "expo-location": "~10.0.0",
     "expo-status-bar": "~1.0.3",
     "native-base": "^2.15.2",
     "react": "16.13.1",
@@ -27,8 +29,7 @@
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.2",
     "react-native-vector-icons": "^8.1.0",
-    "react-native-web": "~0.13.12",
-    "expo-location": "~10.0.0"
+    "react-native-web": "~0.13.12"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
