--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "expo-image-picker": "~9.2.0",
     "expo-location": "~10.0.0",
     "expo-status-bar": "~1.0.3",
+    "mdbreact": "^5.0.1",
     "native-base": "^2.15.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
